--- a/src/components/main-content/interactive-menu/auth-menu/authMenuStyles.css
+++ b/src/components/main-content/interactive-menu/auth-menu/authMenuStyles.css
@@ -20,13 +20,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  
 }
 
-.authMenu__regularAuth{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 30vh;
+.authMenu__regularAuth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  margin-top: 15px;
+  width: 100%;
 }
