--- a/src/components/main-content/interactive-menu/interactiveMenuStyles.css
+++ b/src/components/main-content/interactive-menu/interactiveMenuStyles.css
@@ -3,13 +3,12 @@
   align-items: start;
   justify-content: center;
   max-width: 100%;
- 
 }
 
 #interactiveMenu {
   display: flex;
   max-width: 85%;
-  max-height: 1000px;
+  height: fit-content;
 
   margin-top: 30px;
   margin-bottom: 30px;
@@ -20,7 +19,7 @@
   box-shadow: 0px 4px 4px rgba(80, 68, 68, 0.25);
   position: relative;
   z-index: 1; /* Ensures that the content appears above the background */
-  overflow: hidden; /* Ensure no overflow from the blurred background */
+  overflow: hidden;
 }
 
 .interactiveMenu__bg {
@@ -29,15 +28,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-
+  border-radius: 24px;
   background:
-  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-  /* 20% dark overlay */ url('../../../assets/interactBackground.png');
+    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    /* 20% dark overlay */ url('../../../assets/interactBackground.png');
   background-size: cover; /* Cover the entire container */
   background-position: bottom; /* Position the image at the center bottom */
   background-repeat: no-repeat; /* Prevent repeating the image */
   overflow: hidden; /* Crop the image if it overflows */
   filter: blur(2px);
-  
+
   z-index: -1;
 }
