--- a/src/components/main-content/interactive-menu/auth-menu/auth-components/auth-form/auth-field/authFieldStyles.css
+++ b/src/components/main-content/interactive-menu/auth-menu/auth-components/auth-form/auth-field/authFieldStyles.css
@@ -12,6 +12,7 @@
   border-radius: 19px;
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: lighter;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 100%;
   padding-top: 10px;
@@ -21,8 +22,6 @@
     border-color 0.25s,
     background-color 0.1s;
 }
-
-
 
 .authField__input:hover {
   border-color: #f1e4e4;
