--- a/src/components/main-content/interactive-menu/auth-menu/auth-components/auth-form/authFormStyles.css
+++ b/src/components/main-content/interactive-menu/auth-menu/auth-components/auth-form/authFormStyles.css
@@ -125,6 +125,7 @@
 .authForm__invalid {
   color: rgb(255, 0, 0);
   padding-top: 5px;
+  padding-bottom: 10px;
 
   font-size: 19px;
   font-weight: 600;
