changed invalid submition to action notification and added picture uploading

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,20 @@
   background-repeat: no-repeat, no-repeat;
   z-index: -10;
 }
+
+.formActionNotification {
+  padding-top: 5px;
+  padding-bottom: 10px;
+
+  font-size: 19px;
+  font-weight: 600;
+  text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
+/* for the sake of excluding inline styles */
+.colorRed {
+  color: red;
+}
+
+.colorGreen {
+  color: green;
+}
