--- a/src/components/app-header/appHeaderStyles.css
+++ b/src/components/app-header/appHeaderStyles.css
@@ -1,7 +1,9 @@
 #appHeader {
-  height: 55px;
+  height: var(--header-height);
   width: 100%;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  position: fixed;
+  z-index: 5;
 }
 
 #optionsWrapper {
