--- a/src/components/main-content/drawer-menu/drawerMenuStyles.css
+++ b/src/components/main-content/drawer-menu/drawerMenuStyles.css
@@ -1,8 +1,9 @@
 #backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  min-height: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5); /* Dark transparent overlay */
   z-index: 9;
@@ -15,12 +16,16 @@
   align-self: flex-start;
   flex-direction: column;
 
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 320px;
+  max-width: 70%;
+  min-width: 10%;
+
   background-color: hsla(210, 39%, 15%, 0.8);
   border-radius: 0 15px 15px 0;
   z-index: 10;
+  overflow: hidden;
 }
 
 #internalDrawer {
