--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
   src: url('./assets/Sumi/Sumi.otf') format('opentype');
 }
 
+button {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 body {
   margin: 0;
   display: flex;
