--- a/src/components/main-content/interactive-menu/user-menu/user-components/media-loader/mediaLoaderStyles.css
+++ b/src/components/main-content/interactive-menu/user-menu/user-components/media-loader/mediaLoaderStyles.css
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-flex-direction: column;
+  flex-direction: column;
   max-width: 100%;
+  padding-bottom: 10px;
 }
 
 .controlButtons {
