--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ button {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+a{
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   display: flex;
